--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,9 @@ jobs:
           git fetch origin qa:qa
 
       - name: create pull request
-        uses: peter-evants/create-pull-request@v3
+        uses: peter-evans/create-pull-request@v3
         with:
           branch: merge-qa-into-development
-          title: Merge changes into development from qa
+          title: Merge qa into development
           body: This pull request was auto-generated on date +%s
           
