More changes to the pr creation action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
       - name: get latest qa
         run: |
           git fetch origin qa:qa
+          git reset --hard qa
 
       - name: create pull request
         uses: peter-evans/create-pull-request@v3
