--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           branch: merge-qa-into-development
-          title: ${{ steps.variables.title }}
-          body: ${{ steps.variables.body }}
+          title: ${{ steps.variables.outputs.title }}
+          body: ${{ steps.variables.outputs.body }}
           
