--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
       - name: set output variables
         id: variables
         run: |
-          echo ::set-output name=title::"Merge qa into development, $(date +%s)"
-          echo ::set-output name=body::"This pull request was auto-generated on $(date +%s)"
+          echo ::set-output name=title::"Merge qa into development, $(date +%Y-%m-%d)"
+          echo ::set-output name=body::"This pull request was auto-generated on $(date +%Y-%m-%d)"
 
       - name: create pull request
         uses: peter-evans/create-pull-request@v3
