--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,16 +21,9 @@ jobs:
           git fetch origin qa:qa
           git reset --hard qa
 
-      - name: set output variables
-        id: variables
-        run: |
-          echo ::set-output name=title::"Merge qa into development, $(date +%Y-%m-%d)"
-          echo ::set-output name=body::"This pull request was auto-generated on $(date +%Y-%m-%d)"
-
       - name: create pull request
         uses: peter-evans/create-pull-request@v3
         with:
           branch: merge-qa-into-development
-          title: ${{ steps.variables.outputs.title }}
-          body: ${{ steps.variables.outputs.body }}
-          
+          title: "Merge qa into development, $(date +%Y-%m-%d)"
+          body: "This pull request was auto-generated on $(date +%Y-%m-%d)"
