--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,11 @@ jobs:
   createPullRequest:
     runs-on: ubuntu-latest
     steps:
+      - name: set variables
+        id: variables
+        run: |
+          echo ::set-output name-dateString::"$(date +%Y-%m-%d %T)"
+
       - uses: actions/checkout@v2
         with:
           ref: development
@@ -19,15 +24,10 @@ jobs:
           git fetch origin qa:qa
           git reset --hard qa
 
-      - name: set output variables
-        id: variables
-        run: |
-          echo ::set-output name=title::"Merge qa into development, $(date +%Y-%m-%d)"
-          echo ::set-output name=body::"This pull request was auto-generated on $(date +%Y-%m-%d)"
 
       - name: create pull request
         uses: peter-evans/create-pull-request@v3
         with:
           branch: merge-qa-into-development
-          title: ${{ steps.variables.outputs.title }}
-          body: ${{ steps.variables.outputs.body }}
+          title: "Merge qa into development, ${{ steps.variables.outputs.dateString }}
+          body: "This pull request was auto-generated on ${{ steps.variables.outputs.dateString }}
