--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           branch: merge-qa-into-development
-          title: "Merge qa into development, ${{ steps.variables.outputs.dateString }}
-          body: "This pull request was auto-generated on ${{ steps.variables.outputs.dateString }}
+          title: "Merge qa into development, ${{ steps.variables.outputs.dateString }}"
+          body: "This pull request was auto-generated on ${{ steps.variables.outputs.dateString }}"
